--- a/my-portfolio/src/components/pages/PageStyling.css
+++ b/my-portfolio/src/components/pages/PageStyling.css
@@ -1,12 +1,18 @@
 
-
-.gradient-text {
-  background-image: linear-gradient((45deg, red, blue));
-  -webkit-background-clip: text;
-  color: transparent;
-
-}
-
 .icon-white{
   color: white;
 }
+
+a img:hover{
+  opacity: 0;
+}
+
+
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+
